# DeepPool

./: README.md  pyproject.toml
.github/workflows/: ci.yml
deep_pool/: read_simulator.py  sim.py  trainer.py  tune.py  validate.py  windows.py
deep_pool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
haplomatic/: estimate.py  pop_simulator.py  sim.py  trainer.py  windows.py
haplomatic.egg-info/: SOURCES.txt  entry_points.txt
tests/: dp_test.py
